use JS to stretch grid cells & fix container size

--- a/styles.css
+++ b/styles.css
@@ -35,10 +35,12 @@
     border: 2px;
     border-style: solid;
     border-color:black;
-    padding: 5px;
+    padding: 3px;
     background-color: gray;
-    width: 960px;
-    max-width: 960px;
+    width: 600px;
+    max-width: 600px;
+    height: 600px;
+    max-height:600px;
     /* width: fit-content; */
     display: table;
 }
@@ -47,7 +49,7 @@
     border: 1px;
     border-style: solid;
     border-color: black;
-    padding: 10px;
+    padding: 17.75px;
     background-color: white;
 
     
@@ -58,7 +60,7 @@
     border: 1px;
     border-style: solid;
     border-color: black;
-    padding: 10px;
+    padding: 17.75px;
     background-color: white;
 
 
@@ -67,10 +69,10 @@
 }
 
 .hovered {
-    background-color: darkgray;
+    background-color: black;
 }
 .grid-square.start.hovered {
-    background-color: darkgray;
+    background-color: black;
 
 }
 /* 
